--- a/index.html
+++ b/index.html
@@ -5,73 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
-    <title>Frontend Mentor |</title>
+    <title>Marion Javaloyes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <div class="wrapper">
       <header>
-        <h1>Simple booking</h1>
-        <p class="hero-text">
-          Stay in touch with our dog walkers through the chat interface. This
-          makes it easy to discuss arrangements and make bookings. Once the walk
-          has been completed you can rate your walker and book again all through
-          the chat.
-        </p>
+        <div class="header-content">
+          <div class="header-line"></div>
+          <div class="header-menu">
+            <h1>Marion Javaloyes</h1>
+            <p class="menu-links"></p>
+            <div class="header-social"></div>
+          </div>
+        </div>
       </header>
       <main>
-        <div class="contact">
-          <div class="arrowleft"><</div>
-          <div class="contact-photo">
-            <img src="images/avatar.jpg" alt="" />
-          </div>
-          <div class="contact-details">
-            <h2>Samuel Green</h2>
-            <p>Available to Walk</p>
-          </div>
-          <div class="menu"></div>
-        </div>
-        <div class="whitebox"></div>
+        <div class="contact"></div>
         <div class="content">
-          <div class="msg msg-received">
-            That sounds great. I’d be happy with that.
-          </div>
-          <div class="msg msg-received">
-            Could you send over some pictures of your dog, please?
-          </div>
-          <div class="msg msg-sent msg-photo">
-            <div class="img"><img src="images/dog-image-1.jpg" alt="" /></div>
-            <div class="img"><img src="images/dog-image-2.jpg" alt="" /></div>
-            <div class="img"><img src="images/dog-image-3.jpg" alt="" /></div>
-          </div>
-          <div class="msg msg-sent">
-            Here are a few pictures. She’s a happy girl!
-          </div>
-          <div class="msg msg-sent">Can you make it?</div>
-          <div class="msg msg-received">
-            She looks so happy! The time we discussed works. How long shall I
-            take her out for?
-          </div>
-          <div class="msg msg-option">
-            <div class="option">
-              <p>30 minute walk</p>
-            </div>
-            <div class="price">$29</div>
-          </div>
-          <div class="msg msg-option">
-            <p>1 hour walk</p>
-            <div class="price">$49</div>
-          </div>
-          <div class="msg type-msg">
-            <p>Type a message…</p>
-            <div class="arrowright">></div>
-          </div>
+          <p>- à propos</p>
+          <p>- cours de français langue étrangère</p>
+          <p>- Venir étudier en France</p>
+          <p>- Création de contenu/ ingénierie pédagogique</p>
+          <p>- Correction/ relecture</p>
+          <p>- Foire aux questions</p>
+          <p>- Contact (avec formulaire ou pas)</p>
         </div>
       </main>
     </div>
