--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
           <div class="header-line"></div>
           <div class="header-menu">
             <h1>Marion Javaloyes</h1>
-            <p class="menu-links"></p>
-            <div class="header-social"></div>
+            <div class="menu-links">
+              <p>Menu1</p>
+              <p>Menu2</p>
+              <p>Menu3</p>
+              <p>Menu4</p>
+            </div>
+            <div class="header-social">
+              <p>FB</p>
+              <p>Lin</p>
+              <p>Tw</p>
+            </div>
           </div>
         </div>
       </header>
